--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "py-hover-install",
-  "displayName": "py-hover-install",
+  "publisher": "ahmedelrweny",
+  "displayName": "Py Hover Install",
   "description": "",
+  "icon": "images/icon.png",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.100.0"
@@ -28,6 +30,10 @@
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src",
     "test": "vscode-test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ahmedelrweny/py-hover-install"
   },
   "devDependencies": {
     "@types/vscode": "^1.100.0",
